<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.LoginPage">
<!--这里也可以设置theme-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/welcome" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:fitsSystemWindows="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/UserName"
            android:drawableStart="@color/green"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:fitsSystemWindows="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputUserName"
        android:fitsSystemWindows="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:drawableStart="@color/green"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:fitsSystemWindows="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:background="#ffffff"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputUserPassword"
        android:fitsSystemWindows="true" />

    <!--Make sure your activity's style in manifests is Theme.MaterialComponents-->
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/register"
        app:layout_constraintEnd_toStartOf="@+id/register"
        android:fitsSystemWindows="true" />


    <Button
        android:id="@+id/forget"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/forgetPassword"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        android:fitsSystemWindows="true" />

</android.support.constraint.ConstraintLayout>